[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ryt-dlp"
version = "0.2.0"
description = "A tkinter-based GUI for yt-dlp"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "15rtrujillo", email = "ryantrujillo@comcast.net"}
]

dependencies = [
    "yt-dlp>=2025.12.8",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]